--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 		.flexbox-container > div:first-child {
 			margin-right: 20px;
 		}
-        input {width:100px;
+        input {width:150px;
             display:inline-block;
 
     }
-        label{width:100px;
+        label{width:150px;
             display:inline-block;
+            margin-bottom: 10px;
 
 
         }
@@ -41,12 +42,34 @@
     <body>
         <div class="flexbox-container">
             <div class="">
-                Test 1<br>
+                <h4>Test 1</h4>
+                <label for="">Input One</label>
+                <input type="text" id="name" value=""><br>
+                <label for="">Input One</label>
+                <input type="text" id="name" value="">
+                <label for="">Input One</label>
+                <input type="text" id="name" value="">
                 <label for="">Input One</label>
                 <input type="text" id="name" value="">
             </div>
             <div class="">
-                Test 2
+                <h4>Test 1</h4>
+                <label for="">Input One</label>
+                <input type="text" id="name" value=""><br>
+                <label for="">Input One</label>
+                <input type="text" id="name" value="">
+                <label for="">Input One</label>
+                <input type="text" id="name" value="">
+                <label for="">Input One</label>
+                <input type="text" id="name" value="">
+                <label for="">Input One</label>
+                <input type="text" id="name" value=""><br>
+                <label for="">Input One</label>
+                <input type="text" id="name" value="">
+                <label for="">Input One</label>
+                <input type="text" id="name" value="">
+                <label for="">Input One</label>
+                <input type="text" id="name" value="">
             </div>
         </div>
     </body>
